static/style.css
body {
    background: grey;
    padding: 0;
    margin: 0;
    font-family: "Open Sans", sans-serif;
}

#gallery {
    position: absolute;
    top: 45px;
    height: calc(100vh - 45px);
    overflow: scroll;
    padding: 5px 0 5px 5px;
}

#gallery ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

#gallery ul .category-title {
    position: sticky;
    top: 0;
    float: right;
    width: 20px;
    z-index: 10;
    /* like dimensions for images but without the subtracted padding */
    height: calc(calc(100vw - 40px) / 2);
    /* same padding-top as images */
    padding: 10px 2.5px 0;

    color: yellow;
    font-size: 20px;
}

#gallery ul .category-title span {
    display: block;
    transform: rotate(90deg);
}

#gallery ul li {
    display: inline-block;
}

#gallery img {
    border-radius: 50%;
    border-width: 10px;
    border-style: solid;
    border-color: transparent;
    cursor: pointer;
    box-sizing: border-box;
}

#gallery .selected img {
    border-color: yellow;
}

li .aspect-ratio-box {
    /* gallery padding: 10px; scroll indicator: 30px  */
    width: calc(calc(100vw - 40px) / 2);
}

.aspect-ratio-box {
    position: relative;
    height: 0;
    padding-top: 100%;
}

.aspect-ratio-box img {
    position: absolute;
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    object-fit: cover;
}


.next-button {
    padding-left: 5px;
    width: calc(70px - 5px);
    height: 70px;
    background-color: black;
    border-radius: 50%;
    box-shadow: 0 6px 10px 0 #666;

    font-size: 50px;
    line-height: 70px;
    color: yellow;
    text-align: center;

    position: fixed;
    right: 30px;
    bottom: 50px;

    transition: all 0.1s ease-in-out;

    cursor: pointer;
}

.next-button:hover {
    box-shadow: 0 6px 14px 0 #666;
    transform: scale(1.05);
}

.next-button.disabled {
    opacity: 0.5;
    cursor: initial;
}

.next-button.disabled:hover {
    transform: none;
    box-shadow: none;
}

#hiddenForm {
    display: none;
    visibility: hidden;
}

#progress-wrapper {
    position: sticky;
    top: 25px;
    padding-top: 10px;
    border-top: yellow 3px solid;
    width: calc(100vw - 60px);
    margin: 25px 20px 0;
    z-index: 1;
}

#progress {
    display: flex;
    justify-content: space-between;
    margin-top: -26px;
}

.indicator {
    width: 31px;
    height: 31px;
    border-radius: 50%;
    /*border: black 1px solid;*/
    background: #888888;
    display: flex;
    justify-content: center;
    align-items: center;
    color: yellow;
    font-size: 20px;
}

#scroll {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    width: 25px;
    background: black;
}

